<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021  Drone3D-Team
  ~ The license can be found in LICENSE at root of the repository
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityStyle"
    tools:context=".ui.mission.ItineraryCreateActivity"
    >

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/floatingActionButtonStyle"
            android:id="@+id/buttonToSaveActivity"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="30sp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/content_descriptor_save_icon"
            android:onClick="onSaved"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/floatingActionButtonStyle"
            android:id="@+id/showMission"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="170sp"
            android:contentDescription="@string/content_descriptor_view_mission_icon"
            android:onClick="switchFlightPathVisibility"
            app:srcCompat="@drawable/ic_eye_open" />

        <com.lukelorusso.verticalseekbar.VerticalSeekBar
            android:id="@+id/verticalBar"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="60dp"
            app:vsb_bar_width="10dp"
            app:vsb_max_value="100"
            app:vsb_progress="50" />

        <TextView
            style="@style/simpleTextViewStyle"
            android:id="@+id/altitude"
            android:layout_gravity="bottom|start"
            android:layout_margin="30dp"
            android:gravity="end" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/floatingActionButtonStyle"
            android:id="@+id/delete_button"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/content_descriptor_delete_mission_icon"
            android:onClick="eraseAll"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/floatingActionButtonStyle"
            android:id="@+id/buildFlightPath"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="240dp"
            android:contentDescription="@string/content_descriptor_build_mission_icon"
            android:onClick="buildFlightPath"
            app:srcCompat="@android:drawable/stat_notify_sync" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/floatingActionButtonStyle"
            android:id="@+id/changeStrategy"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="310dp"
            android:contentDescription="@string/content_descriptor_change_strategy_icon"
            android:onClick="switchStrategy"
            app:srcCompat="@drawable/ic_single_path_strategy" />
    </com.mapbox.mapboxsdk.maps.MapView>

</androidx.constraintlayout.widget.ConstraintLayout>


