...
    <string name="content_descriptor_view_mission_icon">view_mission_icon</string>
    <string name="content_descriptor_delete_mission_icon">delete_mission_icon</string>
    <string name="content_descriptor_build_mission_icon">build_mission_icon</string>
    <string name="content_descriptor_change_strategy_icon">change_strategy_icon</string>
    <string name="map_ready">MAP READY</string>
    <string name="map_not_ready">MAP NOT READY</string>
    <string name="confirm_save_without_updating">Save anyway</string>
    <string name="cancel_save_without_updating">Cancel</string>
    <string name="save_without_updating_confirmation">You have updated the mission settings since the last flight path preview. Do you want to save the mission without having seen the updated preview ?</string>
    <string name="altitude_text">"Altitude: %1$.0f m"</string>
    <string name="area_size_to_big">"The selected area is too large. Please create a smaller one."</string>
    <string name="warning_not_login">"Your are not login, you won't be able to save or share your mission."</string>
    <string name="no_saving_possible">"Continue anyway"</string>
    <string name="go_to_login">"Login"</string>

    <!--Manage offline map activity-->
    <string name="tile_count">Tile count:</string>
    <string name="content_descriptor_delete_icon">delete icon</string>
    <string name="delete_successful">Delete successful</string>
    <string name="delete_fail">Failed to delete</string>
...
